# pypi-admin

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  requirements.in  setup.cfg  setup.py  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pypi_admin/: client.py  collaborators.py  events.py  exceptions.py  management.py  projects.py  releases.py  session.py  tokens.py
pypi_admin/tests/: __init__.py
pypi_client/: __init__.py  auth.py  client.py  collaborators.py  exceptions.py  management.py  projects.py  releases.py  session.py  table.py  tokens.py
pypi_manage/: events.py  management.py  session.py  tokens.py
pypi_manage/tests/: __init__.py  test_pypi_client.py
scripts/: pypi-client  pypi-manage
