[metadata]
name = pypi-client
version = attr: pypi_client.__version__
author = Nekmo
author-email = contacto@nekmo.com
url = https://github.com/Nekmo/pypi-client/
download_url = https://github.com/Nekmo/pypi-client/archive/master.zip
description = Pypi Warehoise API client
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any
keywords = pypi-client

[options]
zip_safe = False
include_package_data = True
packages = find:

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = True
restructuredtext = True
strict = True

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pypi_client/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'


[flake8]
exclude = docs

[aliases]

# Define setup.py command aliases here
