[metadata]
name = pypi-admin
version = attr: pypi_admin.__version__
author = Nekmo
author-email = contacto@nekmo.com
url = https://github.com/Nekmo/pypi-admin/
download_url = https://github.com/Nekmo/pypi-admin/archive/master.zip
description = Pypi Warehouse API admin
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any
keywords = pypi-admin

[options]
zip_safe = False
include_package_data = True
packages = find:

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = True
restructuredtext = True
strict = True

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pypi_admin/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'


[flake8]
exclude = docs

[aliases]

# Define setup.py command aliases here
